# Modelo-Ajustes

./: .gitignore  README.md  demo.py  demo_modelo_explicito.py  demo_modelo_implicito.py  main.py  pyproject.toml  requirements.txt  setup.py
Base/: Data.py  FitResult.py  Funciones.py  Graficos.py  __init__.py
Data/: demo_cubica_explicito.csv  demo_elipse_implicito.csv
Datos/: demo_cubica.csv
Notas/: Data.md  FitResult.md  Funciones.md  Graficos.md  data_frames.md  fit_result.md
Tests/: Test_Data.py  Test_Fit.py  Test_FitResult.py  Test_Funciones.py  Test_Graficos.py  conftest.py  dataframe_test.py  fit_result_test.py  fit_test.py  funciones_test.py  graficos_test.py
fittools/: __init__.py  _decoradores.py  data_frames.py  fit_result.py  funciones.py  graficos.py
